--- a/templates/search.html
+++ b/templates/search.html
@@ -27,6 +27,7 @@
     {% if results|length > 0 %}
     <hr />
     <h2>Results (Newest first)</h2>
+    Found {{ results | length }} results
     <ul>
     {% for result in results %}
     <li>
@@ -38,6 +39,8 @@
     </li>
     {% endfor %}
     </ul>
+    {% else %}
+    No results
     {% endif %}
 </div>
 {% endblock %}
