--- a/templates/index.html
+++ b/templates/index.html
@@ -3,13 +3,18 @@
 {% block title %}Powderatlas front page{% endblock %}
 
 {% block content %}
-<h1>Powderatlas front page</h1>
+<h1 style="text-align: center;">Powderatlas front page</h1>
 <div class="content">
+    <div class="blurb">
 <p>
-    Welcome to Powderatlas {{ username }}
+    Welcome to the crew {{ username }}. This is the spot for riders who live for the lines less traveled.<br>
+    Drop your favorite freeride zones, scope what others are shredding, and keep the stoke alive.<br>
+    Whether it’s hidden pow stashes or sketchy chutes, share the goods and find your next send. Ride hard, share harder.<br>
+    <em>Share the stoke!</em>
 </p>
+</div>
 <p>
-    Share the stoke!
+    
 </p>
 <h2>Recent activity:</h2>
 <h3>Latest spots</h3>
