--- a/templates/browse.html
+++ b/templates/browse.html
@@ -52,30 +52,24 @@
 {% endif %}
 </p>
 <p>
-
+Maximum incline: {{ spot.max_incline }}
 </p>
 <p>
-
+Skill level: {{ spot.skill_level }}
 </p>
 <p>
-{{ spot.max_incline }}
+Aspect: {{ spot.aspect }}
 </p>
 <p>
-{{ spot.skill_level }}
-</p>
-<p>
-{{ spot.aspect }}
-</p>
-<p>
+Notes:
 {% for line in spot.notes.splitlines() %}
 {{ line }}<br>
 {% endfor %}
 </p>
 <p>
 Added by: <a href="/user/{{ spot.user_id }}">{{ spot.username }}</a>
-</p>
-<p>
-<small>Added at: {{ spot.added_at }}</small>
+<br>
+<small>Added: {{ spot.added_at }}</small>
 </p>
 <hr />
 {% endfor %}
