--- a/templates/layout.html
+++ b/templates/layout.html
@@ -15,10 +15,10 @@
       <nav>
         <ul>
           <li><a href="/">Front page</a></li>
-          <li><a href="/add_spot">Add a new spot</a></li>
+          <li><a href="/add_spot">Add spot</a></li>
           <li><a href="/browse">Spots</a></li>
           <li><a href="/browse_users">Users</a></li>
-          <li><a href="/search">Search spots</a></li>
+          <li><a href="/search">Search</a></li>
           <li><a href="/user/{{ session.user_id }}">User page</a></li>
           <li><a href="/logout">Log out</a></li>
         </ul>
