--- a/static/main.css
+++ b/static/main.css
@@ -48,6 +48,12 @@ nav li:not(:last-of-type) {
   border-right: 1px solid black;
 }
 
+.nav_links{
+  background-color: rgba(45, 68, 101, 0.85);
+  padding-left: 2em;
+  padding-top: 0.5em;
+}
+
 .blurb {
   text-align: center;
   line-height: 150%;
@@ -58,6 +64,7 @@ nav li:not(:last-of-type) {
     color: rgb(197, 231, 255);
     background-color: rgba(45, 68, 101, 0.85);
     padding: 2em;
+    padding-top: 1px;
 } 
 
 
