Formatted ul style. No padding nor bullet points

--- a/static/main.css
+++ b/static/main.css
@@ -67,6 +67,10 @@ nav li:not(:last-of-type) {
     padding-top: 1px;
 } 
 
+ul {
+    list-style: none;
+    padding: 0;
+}
 
 a:visited {
     color:aliceblue
