Edited welcome blurb

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,9 +8,11 @@
     <div class="blurb">
 <p>
     Welcome to the crew {{ username }}. This is the spot for riders who live for the lines less traveled.<br>
-    Drop your favorite freeride zones, scope what others are shredding, and keep the stoke alive.<br>
-    Whether it’s hidden pow stashes or sketchy chutes, share the goods and find your next send. Ride hard, share harder.<br>
-    <em>Share the stoke!</em>
+    Drop your favorite freeride zones, scope what others are shredding, and keep the stoke alive.
+    Whether it’s hidden pow stashes or sketchy chutes, share the goods and find your next send. <br>
+</p>
+<p>
+    <b>Ride hard, share harder &ndash; share the stoke!</b>
 </p>
 </div>
 <p>
@@ -27,6 +29,7 @@
     </li>
     {% endfor %}
 </ul>
+<hr />
 <h3>Latest messages</h3>
 <ul>
     {% for message in latest_messages %}
