--- a/templates/browse.html
+++ b/templates/browse.html
@@ -52,24 +52,24 @@
 {% endif %}
 </p>
 <p>
-Maximum incline: {{ spot.max_incline }}
+<b>Skill level:</b> {{ spot.skill_level }}
 </p>
 <p>
-Skill level: {{ spot.skill_level }}
+<b>Maximum incline:</b> {{ spot.max_incline }}
 </p>
 <p>
-Aspect: {{ spot.aspect }}
+<b>Aspect:</b> {{ spot.aspect }}
 </p>
 <p>
-Notes:
+<b>Notes:</b>
 {% for line in spot.notes.splitlines() %}
 {{ line }}<br>
 {% endfor %}
 </p>
 <p>
-Added by: <a href="/user/{{ spot.user_id }}">{{ spot.username }}</a>
+<b>Added {{ spot.added_at[:10] }} by:</b> <a href="/user/{{ spot.user_id }}">{{ spot.username }}</a> | {{spot.message_count}} comments
 <br>
-<small>{{ spot.added_at[:10] }}</small>
+
 </p>
 <hr />
 {% endfor %}
