--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
     {% for spot in latest_spots %}
     <li>
         <p>
-        <a href="/spot/{{ spot.id }}">{{ spot.title}}</a> | {{ spot.continent }} | {{ spot.country}}
+        <a href="/spot/{{ spot.id }}">{{ spot.title}}</a> | {{ spot.continent }} | {{ spot.country}} | {{ spot.skill_level }}
         </p>
     </li>
     {% endfor %}
