Tidying up html code

--- a/templates/browse_users.html
+++ b/templates/browse_users.html
@@ -7,22 +7,22 @@
 <h1>Browse users</h1>
 
 <div class="content">
-{% for user in user_list|sort (attribute='username') %}
-<p>
-<h2><a href="/user/{{ user.id }}">{{ user.username }}</a>
-</h2> Member since {{ user.added_at[:10] }}
-<br>
-{% set user_spots = spot_list | selectattr("user_id", "equalto", user.id) | list %}
-{% set user_messages = message_list | selectattr("user_id", "equalto", user.id) | list %}
-<p> 
-    {{user_spots | length }} spots posted by user | {{user_messages | length}} messages sent by user
-</p>
-{% endfor %}
-<hr />
-<p>
-<a href="/browse_users/{{ page - 1 }}">&lt;&lt;</a>
-Page {{ page }}/{{ page_count }}
-<a href="/browse_users/{{ page + 1 }}">&gt;&gt;</a>
-</p>
+    {% for user in user_list|sort (attribute='username') %}
+    <p>
+        <h2><a href="/user/{{ user.id }}">{{ user.username }}</a></h2> Member since {{ user.added_at[:10] }}
+        <br>
+        {% set user_spots = spot_list | selectattr("user_id", "equalto", user.id) | list %}
+        {% set user_messages = message_list | selectattr("user_id", "equalto", user.id) | list %}
+    </p>
+    <p>
+        {{user_spots | length }} spots posted by user | {{user_messages | length}} messages sent by user
+    </p>
+    {% endfor %}
+    <hr />
+    <p>
+        <a href="/browse_users/{{ page - 1 }}">&lt;&lt;</a>
+        Page {{ page }}/{{ page_count }}
+        <a href="/browse_users/{{ page + 1 }}">&gt;&gt;</a>
+    </p>
 </div>
 {% endblock %}
