--- a/static/main.css
+++ b/static/main.css
@@ -80,6 +80,12 @@ a:link {
     color:azure
 }
 
+.info {
+  color:rgb(244, 88, 21);
+  margin-bottom: 5px;
+  font-size: 20px;
+}
+
 .button {
 display: inline-block;
 padding: 3px 20px;
