--- a/static/main.css
+++ b/static/main.css
@@ -91,7 +91,7 @@ display: inline-block;
 padding: 3px 20px;
 background-color: rgb(124, 124, 124);
 border: 1px solid rgb(207, 207, 207);
-color: rgb(0, 0, 0) !important;
+color: rgb(255, 255, 255) !important;
 border-radius: 5px;
 text-decoration: none;
 font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -105,6 +105,7 @@ display: inline-block;
 padding: 3px 20px;
 background-color: rgb(124, 124, 124);
 border: 1px solid rgb(207, 207, 207);
+color: rgb(255, 255, 255);
 border-radius: 5px;
 text-decoration: none;
 font-size: 14px;
