--- a/templates/add_spot.html
+++ b/templates/add_spot.html
@@ -14,8 +14,8 @@
 <div class="content">
 <form action="/add_spot" method="post" enctype="multipart/form-data">
     <p>
-        <label for="title">Spot title (required):</label>: <br />
-    <input type="text" name="title" value= "{{ filled.title }}" maxlength="100" required/>
+        <label for="title">Spot title (required)</label>: <br />
+        <input type="text" name="title" value= "{{ filled.title }}" maxlength="100" required/>
     </p>
     <p>
         <label for="country">Country</label>: <br />
@@ -34,9 +34,9 @@
     </p>
     <p>
         <label for="aspect">Slope aspect</label>: <br />
-    <select name="aspect">
+        <select name="aspect">
         {% for aspect in aspects %}
-        <option value="{{ aspect }}">{{ aspect }}</option>
+            <option value="{{ aspect }}">{{ aspect }}</option>
         {% endfor %}
     </select>
 
@@ -56,16 +56,16 @@
     </p>
     <p>
         <label for="incline">Slope maximum incline</label>: <br />
-    <input type="text" name="max_incline" value= "{{ filled.max_incline }}" maxlength="2" size="4"/>
+        <input type="text" name="max_incline" value= "{{ filled.max_incline }}" maxlength="2" size="4"/>
     </p>
     <p>
         <label for="notes">Notes</label>: <br />
-    <textarea name="notes" rows="15" cols="89" maxlength="5000">{{ filled.notes }}</textarea>
+        <textarea name="notes" rows="15" cols="89" maxlength="5000">{{ filled.notes }}</textarea>
     </p>
     <p>
-    <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}" />
-    <input type="submit" name="submit" value="Submit" />
-    <a href="/browse" class="button">Cancel</a>
+        <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}" />
+        <input type="submit" name="submit" value="Submit" />
+        <a href="/browse" class="button">Cancel</a>
     </p>
 </form>
 </div>
